Python Tooltips partially missing #73150

Closed
opened 2020-01-15 22:29:02 +01:00 by Debuk · 10 comments

Blender Version
Broken: version: 2.83 (sub 0), branch: master, commit date: 2020-01-12 16:27, hash: f6aac92ab8
Worked: (optional)

Some tooltips don't show python info even if python tooltips are activated

Exact steps for others to reproduce the error

  • Start Blender
  • Open Edit->Preferences->Interface->Display
  • Activate Python Tooltips
  • Check the the tooltips of the vertical toolbars icons in the 3d viewport on the left side.
  • Works with none of these

pythontooltips.jpg

Here's a screenshot I found online from Mid 2019

txW1v.png

**Blender Version** Broken: version: 2.83 (sub 0), branch: master, commit date: 2020-01-12 16:27, hash: `f6aac92ab8` Worked: (optional) **Some tooltips don't show python info even if python tooltips are activated** **Exact steps for others to reproduce the error** - Start Blender - Open Edit->Preferences->Interface->Display - Activate Python Tooltips - Check the the tooltips of the vertical toolbars icons in the 3d viewport on the left side. - Works with none of these ![pythontooltips.jpg](https://archive.blender.org/developer/F8280681/pythontooltips.jpg) Here's a screenshot I found online from Mid 2019 ![txW1v.png](https://archive.blender.org/developer/F8280694/txW1v.png)
Author

Added subscriber: @Debuk

Added subscriber: @Debuk

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

What would you expect to see here?

Python tooltips show paths to operators and to RNA items, but tools aren't those things. Also, I don't think there was ever any Python tooltips for this.

Pretty sure this is a, not a bug and b, there's not even a clear concept of what would be shown.

What would you expect to see here? Python tooltips show paths to operators and to RNA items, but tools aren't those things. Also, I don't think there was ever any Python tooltips for this. Pretty sure this is a, not a bug and b, there's not even a clear concept of what would be shown.
Author

What would you expect to see here?

For the box select eg. this would fit. No? bpy.ops.wm.tool_set_by_id(name="builtin.select_box)

Also, I don't think there was ever any Python tooltips for this.

I posted a screenshot with one of them.

txW1v.png

Python tooltips show paths to operators

Yes and the relating operator the developer might be interested is in that case

bpy.ops.wm.tool_set_by_id(...)

Pretty sure this is a, not a bug

You told me to file a bug report for this, why do you recommend to do this in first place then?

b, there's not even a clear concept of what would be shown.

I can't follow this.

> What would you expect to see here? For the box select eg. this would fit. No? bpy.ops.wm.tool_set_by_id(name="builtin.select_box) > Also, I don't think there was ever any Python tooltips for this. I posted a screenshot with one of them. ![txW1v.png](https://archive.blender.org/developer/F8280694/txW1v.png) > Python tooltips show paths to operators Yes and the relating operator the developer might be interested is in that case bpy.ops.wm.tool_set_by_id(...) > Pretty sure this is a, not a bug You told me to file a bug report for this, why do you recommend to do this in first place then? > b, there's not even a clear concept of what would be shown. I can't follow this.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I'll get another developer to check if this is a bug.

@ideasman42 can you confirm if this a bug or not?

I'll get another developer to check if this is a bug. @ideasman42 can you confirm if this a bug or not?
Author

Animated Gif (Click to View)
Blender 2.80 Official Release
tooltips.gif

Animated Gif (Click to View) Blender 2.80 Official Release ![tooltips.gif](https://archive.blender.org/developer/F8280774/tooltips.gif)

This issue was referenced by 7570c07bfd

This issue was referenced by 7570c07bfdff4c0cfebb910cfc2b925158e53b88

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Campbell Barton self-assigned this 2020-01-16 06:44:09 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73150
No description provided.