Fix T73150: Python tooltips missing from toolbar